tests/negative/gold/no_nl_test.gold
tests/negative/no_nl_test.toit:7:3: error: Incomplete expression
  if
  ^
tests/negative/no_nl_test.toit:7:3: error: Missing ':' for 'if' condition
  if
  ^
Compilation failed.
